--- a/sfm-datastax/pom.xml
+++ b/sfm-datastax/pom.xml
@@ -1,12 +1,12 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>sfm-datastax</artifactId>
+	<artifactId>sfm-datastax-jre6</artifactId>
 	<packaging>bundle</packaging>
 
 	<parent>
 		<groupId>org.simpleflatmapper</groupId>
-		<artifactId>sfm-parent</artifactId>
+		<artifactId>sfm-parent-jre6</artifactId>
 		<version>8.1.2-SNAPSHOT</version>
 	</parent>
 
@@ -57,12 +57,12 @@
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-map</artifactId>
+			<artifactId>sfm-map-jre6</artifactId>
 			<version>8.1.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-tuples</artifactId>
+			<artifactId>sfm-tuples-jre6</artifactId>
 			<version>8.1.2-SNAPSHOT</version>
 		</dependency>
 
@@ -75,7 +75,7 @@
 
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-map</artifactId>
+			<artifactId>sfm-map-jre6</artifactId>
 			<version>8.1.2-SNAPSHOT</version>
 			<type>test-jar</type>
 			<scope>test</scope>
@@ -83,13 +83,13 @@
 
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-test</artifactId>
+			<artifactId>sfm-test-jre6</artifactId>
 			<version>8.1.2-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-converter-joda-time</artifactId>
+			<artifactId>sfm-converter-joda-time-jre6</artifactId>
 			<version>8.1.2-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
