--- a/sfm-test-osgi/pom.xml
+++ b/sfm-test-osgi/pom.xml
@@ -1,8 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.simpleflatmapper</groupId>
-	<artifactId>sfm-test-osgi</artifactId>
+	<artifactId>sfm-test-osgi-jre6</artifactId>
 	<packaging>jar</packaging>
 
 	<version>8.1.2-SNAPSHOT</version>
@@ -45,7 +45,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-csv</artifactId>
+			<artifactId>sfm-csv-jre6</artifactId>
 			<version>8.1.2-SNAPSHOT</version>
 		</dependency>
 
@@ -57,12 +57,12 @@
 
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-jdbc</artifactId>
+			<artifactId>sfm-jdbc-jre6</artifactId>
 			<version>8.1.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-poi</artifactId>
+			<artifactId>sfm-poi-jre6</artifactId>
 			<version>8.1.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
