--- a/sfm-tuples/pom.xml
+++ b/sfm-tuples/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.simpleflatmapper</groupId>
 		<artifactId>sfm-parent</artifactId>
-		<version>8.2.0</version>
+		<version>8.2.1-SNAPSHOT</version>
 	</parent>
 
 	<name>sfm-tuples</name>
@@ -33,7 +33,7 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-test</artifactId>
-			<version>8.2.0</version>
+			<version>8.2.1-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
