--- a/sfm-tuples/pom.xml
+++ b/sfm-tuples/pom.xml
@@ -12,7 +12,7 @@
         		
         <artifactId>sfm-parent-jre9</artifactId>
         		
-        <version>8.2.1-SNAPSHOT</version>
+        <version>8.2.0</version>
         	
     </parent>
     	
@@ -56,7 +56,7 @@
             			
             <artifactId>sfm-test-jre9</artifactId>
             			
-            <version>8.2.1-SNAPSHOT</version>
+            <version>8.2.0</version>
             			
             <scope>test</scope>
             		
@@ -82,7 +82,7 @@
                         						
                         <Export-Package>org.simpleflatmapper.tuple</Export-Package>
                         						
-                        <Import-Package/>
+                        <Import-Package />
                         					
                     </instructions>
                     					
