--- a/sfm-converter-protobuf/pom.xml
+++ b/sfm-converter-protobuf/pom.xml
@@ -12,7 +12,7 @@
         		
         <artifactId>sfm-parent-jre9</artifactId>
         		
-        <version>8.2.1-SNAPSHOT</version>
+        <version>8.2.0</version>
         	
     </parent>
     	
@@ -66,7 +66,7 @@
             			
             <artifactId>sfm-converter-jre9</artifactId>
             			
-            <version>8.2.1-SNAPSHOT</version>
+            <version>8.2.0</version>
             		
         </dependency>
         		
@@ -76,7 +76,7 @@
             			
             <artifactId>sfm-converter-jre9</artifactId>
             			
-            <version>8.2.1-SNAPSHOT</version>
+            <version>8.2.0</version>
             			
             <scope>test</scope>
             			
