--- a/sfm-csv/pom.xml
+++ b/sfm-csv/pom.xml
@@ -1,12 +1,12 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>sfm-csv</artifactId>
+	<artifactId>sfm-csv-jre6</artifactId>
 	<packaging>bundle</packaging>
 
 	<parent>
 		<groupId>org.simpleflatmapper</groupId>
-		<artifactId>sfm-parent</artifactId>
+		<artifactId>sfm-parent-jre6</artifactId>
 		<version>8.2.1-SNAPSHOT</version>
 	</parent>
 
@@ -32,35 +32,35 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>lightning-csv</artifactId>
+			<artifactId>lightning-csv-jre6</artifactId>
 			<version>8.2.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-map</artifactId>
+			<artifactId>sfm-map-jre6</artifactId>
 			<version>8.2.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-tuples</artifactId>
+			<artifactId>sfm-tuples-jre6</artifactId>
 			<version>8.2.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-map</artifactId>
+			<artifactId>sfm-map-jre6</artifactId>
 			<version>8.2.1-SNAPSHOT</version>
 			<scope>test</scope>
 			<type>test-jar</type>
 		</dependency>
         <dependency>
             <groupId>org.simpleflatmapper</groupId>
-            <artifactId>sfm-test</artifactId>
+            <artifactId>sfm-test-jre6</artifactId>
             <version>8.2.1-SNAPSHOT</version>
             <scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-converter-joda-time</artifactId>
+			<artifactId>sfm-converter-joda-time-jre6</artifactId>
 			<version>8.2.1-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
