--- a/sfm-converter-joda-time/pom.xml
+++ b/sfm-converter-joda-time/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.simpleflatmapper</groupId>
 		<artifactId>sfm-parent</artifactId>
-		<version>8.2.1-SNAPSHOT</version>
+		<version>8.2.1</version>
 	</parent>
 
 	<name>sfm-converter-joda-time</name>
@@ -37,17 +37,17 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-converter</artifactId>
-			<version>8.2.1-SNAPSHOT</version>
+			<version>8.2.1</version>
 		</dependency>
         <dependency>
             <groupId>org.simpleflatmapper</groupId>
             <artifactId>sfm-util</artifactId>
-			<version>8.2.1-SNAPSHOT</version>
+			<version>8.2.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-converter</artifactId>
-			<version>8.2.1-SNAPSHOT</version>
+			<version>8.2.1</version>
 			<scope>test</scope>
 			<type>test-jar</type>
 		</dependency>
