--- a/sfm-jdbi3/pom.xml
+++ b/sfm-jdbi3/pom.xml
@@ -9,7 +9,7 @@
 
 	<parent>
 		<groupId>org.simpleflatmapper</groupId>
-		<version>8.2.1-SNAPSHOT</version>
+		<version>8.2.1</version>
 		<artifactId>sfm-parent</artifactId>
 	</parent>
 
@@ -60,12 +60,12 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-jdbc</artifactId>
-			<version>8.2.1-SNAPSHOT</version>
+			<version>8.2.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-test</artifactId>
-			<version>8.2.1-SNAPSHOT</version>
+			<version>8.2.1</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
