--- a/sfm-converter/pom.xml
+++ b/sfm-converter/pom.xml
@@ -12,7 +12,7 @@
         		
         <artifactId>sfm-parent-jre9</artifactId>
         		
-        <version>8.2.2-SNAPSHOT</version>
+        <version>8.2.1</version>
         	
     </parent>
     	
@@ -56,7 +56,7 @@
             			
             <artifactId>sfm-util-jre9</artifactId>
             			
-            <version>8.2.2-SNAPSHOT</version>
+            <version>8.2.1</version>
             		
         </dependency>
         	
