--- a/sfm-jdbc/pom.xml
+++ b/sfm-jdbc/pom.xml
@@ -1,12 +1,12 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>sfm-jdbc</artifactId>
+	<artifactId>sfm-jdbc-jre6</artifactId>
 	<packaging>bundle</packaging>
 
 	<parent>
 		<groupId>org.simpleflatmapper</groupId>
-		<artifactId>sfm-parent</artifactId>
+		<artifactId>sfm-parent-jre6</artifactId>
 		<version>8.2.2-SNAPSHOT</version>
 	</parent>
 
@@ -33,7 +33,7 @@
 
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-map</artifactId>
+			<artifactId>sfm-map-jre6</artifactId>
 			<version>8.2.2-SNAPSHOT</version>
 		</dependency>
 
@@ -50,26 +50,26 @@
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-test</artifactId>
+			<artifactId>sfm-test-jre6</artifactId>
 			<version>8.2.2-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-map</artifactId>
+			<artifactId>sfm-map-jre6</artifactId>
 			<version>8.2.2-SNAPSHOT</version>
 			<scope>test</scope>
 			<classifier>tests</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-tuples</artifactId>
+			<artifactId>sfm-tuples-jre6</artifactId>
 			<version>8.2.2-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-converter-joda-time</artifactId>
+			<artifactId>sfm-converter-joda-time-jre6</artifactId>
 			<version>8.2.2-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
