--- a/sfm-datastax/pom.xml
+++ b/sfm-datastax/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.simpleflatmapper</groupId>
 		<artifactId>sfm-parent</artifactId>
-		<version>8.2.2-SNAPSHOT</version>
+		<version>8.2.2</version>
 	</parent>
 
 	<name>sfm-datastax</name>
@@ -58,12 +58,12 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-map</artifactId>
-			<version>8.2.2-SNAPSHOT</version>
+			<version>8.2.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-tuples</artifactId>
-			<version>8.2.2-SNAPSHOT</version>
+			<version>8.2.2</version>
 		</dependency>
 
 		<dependency>
@@ -76,7 +76,7 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-map</artifactId>
-			<version>8.2.2-SNAPSHOT</version>
+			<version>8.2.2</version>
 			<type>test-jar</type>
 			<scope>test</scope>
 		</dependency>
@@ -84,13 +84,13 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-test</artifactId>
-			<version>8.2.2-SNAPSHOT</version>
+			<version>8.2.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-converter-joda-time</artifactId>
-			<version>8.2.2-SNAPSHOT</version>
+			<version>8.2.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
