--- a/sfm-csv/pom.xml
+++ b/sfm-csv/pom.xml
@@ -1,232 +1,429 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-
-	<artifactId>sfm-csv</artifactId>
-	<packaging>bundle</packaging>
-
-	<parent>
-		<groupId>org.simpleflatmapper</groupId>
-		<artifactId>sfm-parent</artifactId>
-		<version>8.2.3-SNAPSHOT</version>
-	</parent>
-
-	<name>sfm-csv</name>
-	<description>Java library to map flat record - ResultSet, csv - to java object with minimum configuration and low footprint.</description>
-
-	<developers>
-		<developer>
-			<id>arnaudroger</id>
-			<name>Arnaud Roger</name>
-			<email>arnaud.roger@gmail.com</email>
-		</developer>
-	</developers>
-
-	<licenses>
-		<license>
-			<name>The MIT License (MIT)</name>
-			<url>http://opensource.org/licenses/MIT</url>
-			<distribution>repo</distribution>
-		</license>
-	</licenses>
-
-	<dependencies>
-		<dependency>
-			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>lightning-csv</artifactId>
-			<version>8.2.3-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-map</artifactId>
-			<version>8.2.3-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-tuples</artifactId>
-			<version>8.2.3-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-map</artifactId>
-			<version>8.2.3-SNAPSHOT</version>
-			<scope>test</scope>
-			<type>test-jar</type>
-		</dependency>
+<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    	
+    <modelVersion>4.0.0</modelVersion>
+    	
+    <artifactId>sfm-csv-jre9</artifactId>
+    	
+    <packaging>bundle</packaging>
+    	
+    <parent>
+        		
+        <groupId>org.simpleflatmapper</groupId>
+        		
+        <artifactId>sfm-parent-jre9</artifactId>
+        		
+        <version>8.2.3-SNAPSHOT</version>
+        	
+    </parent>
+    	
+    <name>sfm-csv</name>
+    	
+    <description>Java library to map flat record - ResultSet, csv - to java object with minimum configuration and low footprint.</description>
+    	
+    <developers>
+        		
+        <developer>
+            			
+            <id>arnaudroger</id>
+            			
+            <name>Arnaud Roger</name>
+            			
+            <email>arnaud.roger@gmail.com</email>
+            		
+        </developer>
+        	
+    </developers>
+    	
+    <licenses>
+        		
+        <license>
+            			
+            <name>The MIT License (MIT)</name>
+            			
+            <url>http://opensource.org/licenses/MIT</url>
+            			
+            <distribution>repo</distribution>
+            		
+        </license>
+        	
+    </licenses>
+    	
+    <dependencies>
+        		
         <dependency>
+            			
             <groupId>org.simpleflatmapper</groupId>
-            <artifactId>sfm-test</artifactId>
+            			
+            <artifactId>lightning-csv-jre9</artifactId>
+            			
             <version>8.2.3-SNAPSHOT</version>
+            		
+        </dependency>
+        		
+        <dependency>
+            			
+            <groupId>org.simpleflatmapper</groupId>
+            			
+            <artifactId>sfm-map-jre9</artifactId>
+            			
+            <version>8.2.3-SNAPSHOT</version>
+            		
+        </dependency>
+        		
+        <dependency>
+            			
+            <groupId>org.simpleflatmapper</groupId>
+            			
+            <artifactId>sfm-tuples-jre9</artifactId>
+            			
+            <version>8.2.3-SNAPSHOT</version>
+            		
+        </dependency>
+        		
+        <dependency>
+            			
+            <groupId>org.simpleflatmapper</groupId>
+            			
+            <artifactId>sfm-map-jre9</artifactId>
+            			
+            <version>8.2.3-SNAPSHOT</version>
+            			
             <scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-converter-joda-time</artifactId>
-			<version>8.2.3-SNAPSHOT</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>joda-time</groupId>
-			<artifactId>joda-time</artifactId>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
-			<scope>test</scope>
-		</dependency>
+            			
+            <type>test-jar</type>
+            		
+        </dependency>
+                
+        <dependency>
+                        
+            <groupId>org.simpleflatmapper</groupId>
+                        
+            <artifactId>sfm-test-jre9</artifactId>
+                        
+            <version>8.2.3-SNAPSHOT</version>
+                        
+            <scope>test</scope>
+            		
+        </dependency>
+        		
+        <dependency>
+            			
+            <groupId>org.simpleflatmapper</groupId>
+            			
+            <artifactId>sfm-converter-joda-time-jre9</artifactId>
+            			
+            <version>8.2.3-SNAPSHOT</version>
+            			
+            <scope>test</scope>
+            		
+        </dependency>
+        		
+        <dependency>
+            			
+            <groupId>joda-time</groupId>
+            			
+            <artifactId>joda-time</artifactId>
+            			
+            <scope>test</scope>
+            		
+        </dependency>
+        		
+        <dependency>
+            			
+            <groupId>junit</groupId>
+            			
+            <artifactId>junit</artifactId>
+            			
+            <version>4.12</version>
+            			
+            <scope>test</scope>
+            		
+        </dependency>
+            
     </dependencies>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.felix</groupId>
-				<artifactId>maven-bundle-plugin</artifactId>
-				<extensions>true</extensions>
-				<configuration>
-					<instructions>
-						<Export-Package>org.simpleflatmapper.csv,org.simpleflatmapper.csv.property,org.simpleflatmapper.csv.parser</Export-Package>
-						<Import-Package>
+    	
+    <build>
+        		
+        <plugins>
+            			
+            <plugin>
+                				
+                <groupId>org.apache.felix</groupId>
+                				
+                <artifactId>maven-bundle-plugin</artifactId>
+                				
+                <extensions>true</extensions>
+                				
+                <configuration>
+                    					
+                    <instructions>
+                        						
+                        <Export-Package>org.simpleflatmapper.csv,org.simpleflatmapper.csv.property,org.simpleflatmapper.csv.parser</Export-Package>
+                        						
+                        <Import-Package>
 							org.simpleflatmapper.*
 						</Import-Package>
-					</instructions>
-					<archive>
-						<manifestEntries>
-							<Automatic-Module-Name>org.simpleflatmapper.csv</Automatic-Module-Name>
-						</manifestEntries>
-					</archive>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
-	<profiles>
-		<profile>
-			<id>travis</id>
-			<activation>
-				<property>
-					<name>env.TRAVIS</name>
-					<value>true</value>
-				</property>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.jacoco</groupId>
-						<artifactId>jacoco-maven-plugin</artifactId>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>jdk16</id>
-			<activation>
-				<jdk>1.6</jdk>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-compiler-plugin</artifactId>
-					</plugin>
-					<plugin>
-						<groupId>com.google.code.maven-replacer-plugin</groupId>
-						<artifactId>replacer</artifactId>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>jdk17</id>
-			<activation>
-				<jdk>1.7</jdk>
-			</activation>
-			<dependencies>
-				<dependency>
-					<groupId>com.boundary</groupId>
-					<artifactId>fasttuple-core</artifactId>
-					<version>0.1</version>
-					<optional>true</optional>
-					<scope>test</scope>
-				</dependency>
-			</dependencies>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-compiler-plugin</artifactId>
-					</plugin>
-					<plugin>
-						<groupId>com.google.code.maven-replacer-plugin</groupId>
-						<artifactId>replacer</artifactId>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>jdk18</id>
-			<activation>
-				<jdk>1.8</jdk>
-			</activation>
-
-			<dependencies>
-				<dependency>
-					<groupId>org.jooq</groupId>
-					<artifactId>jool</artifactId>
-					<version>0.9.12</version>
-					<optional>true</optional>
-					<scope>test</scope>
-				</dependency>
-				<dependency>
-					<groupId>com.boundary</groupId>
-					<artifactId>fasttuple-core</artifactId>
-					<version>0.1</version>
-					<optional>true</optional>
-					<scope>test</scope>
-				</dependency>
-			</dependencies>
-		</profile>
-
-		<profile>
-			<id>jdk19</id>
-			<activation>
-				<jdk>[9,12]</jdk>
-			</activation>
-			<dependencies>
-				<dependency>
-					<groupId>org.jooq</groupId>
-					<artifactId>jool</artifactId>
-					<version>0.9.12</version>
-					<optional>true</optional>
-					<scope>test</scope>
-				</dependency>
-				<dependency>
-					<groupId>com.boundary</groupId>
-					<artifactId>fasttuple-core</artifactId>
-					<version>0.1</version>
-					<optional>true</optional>
-					<scope>test</scope>
-				</dependency>
-			</dependencies>
-
-			<build>
-				<plugins>
-
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<configuration>
-							<argLine>--add-opens java.base/java.lang=ALL-UNNAMED 
+                        					
+                    </instructions>
+                    					
+                    <archive>
+                        						
+                        <manifestEntries>
+                            							
+                            <Automatic-Module-Name>org.simpleflatmapper.csv</Automatic-Module-Name>
+                            						
+                        </manifestEntries>
+                        					
+                    </archive>
+                    				
+                </configuration>
+                			
+            </plugin>
+            		
+        </plugins>
+        	
+    </build>
+    	
+    <profiles>
+        		
+        <profile>
+            			
+            <id>travis</id>
+            			
+            <activation>
+                				
+                <property>
+                    					
+                    <name>env.TRAVIS</name>
+                    					
+                    <value>true</value>
+                    				
+                </property>
+                			
+            </activation>
+            			
+            <build>
+                				
+                <plugins>
+                    					
+                    <plugin>
+                        						
+                        <groupId>org.jacoco</groupId>
+                        						
+                        <artifactId>jacoco-maven-plugin</artifactId>
+                        					
+                    </plugin>
+                    				
+                </plugins>
+                			
+            </build>
+            		
+        </profile>
+        		
+        <profile>
+            			
+            <id>jdk16</id>
+            			
+            <activation>
+                				
+                <jdk>1.6</jdk>
+                			
+            </activation>
+            			
+            <build>
+                				
+                <plugins>
+                    					
+                    <plugin>
+                        						
+                        <groupId>org.apache.maven.plugins</groupId>
+                        						
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        					
+                    </plugin>
+                    					
+                    <plugin>
+                        						
+                        <groupId>com.google.code.maven-replacer-plugin</groupId>
+                        						
+                        <artifactId>replacer</artifactId>
+                        					
+                    </plugin>
+                    				
+                </plugins>
+                			
+            </build>
+            		
+        </profile>
+        		
+        <profile>
+            			
+            <id>jdk17</id>
+            			
+            <activation>
+                				
+                <jdk>1.7</jdk>
+                			
+            </activation>
+            			
+            <dependencies>
+                				
+                <dependency>
+                    					
+                    <groupId>com.boundary</groupId>
+                    					
+                    <artifactId>fasttuple-core</artifactId>
+                    					
+                    <version>0.1</version>
+                    					
+                    <optional>true</optional>
+                    					
+                    <scope>test</scope>
+                    				
+                </dependency>
+                			
+            </dependencies>
+            			
+            <build>
+                				
+                <plugins>
+                    					
+                    <plugin>
+                        						
+                        <groupId>org.apache.maven.plugins</groupId>
+                        						
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        					
+                    </plugin>
+                    					
+                    <plugin>
+                        						
+                        <groupId>com.google.code.maven-replacer-plugin</groupId>
+                        						
+                        <artifactId>replacer</artifactId>
+                        					
+                    </plugin>
+                    				
+                </plugins>
+                			
+            </build>
+            		
+        </profile>
+        		
+        <profile>
+            			
+            <id>jdk18</id>
+            			
+            <activation>
+                				
+                <jdk>1.8</jdk>
+                			
+            </activation>
+            			
+            <dependencies>
+                				
+                <dependency>
+                    					
+                    <groupId>org.jooq</groupId>
+                    					
+                    <artifactId>jool</artifactId>
+                    					
+                    <version>0.9.12</version>
+                    					
+                    <optional>true</optional>
+                    					
+                    <scope>test</scope>
+                    				
+                </dependency>
+                				
+                <dependency>
+                    					
+                    <groupId>com.boundary</groupId>
+                    					
+                    <artifactId>fasttuple-core</artifactId>
+                    					
+                    <version>0.1</version>
+                    					
+                    <optional>true</optional>
+                    					
+                    <scope>test</scope>
+                    				
+                </dependency>
+                			
+            </dependencies>
+            		
+        </profile>
+        		
+        <profile>
+            			
+            <id>jdk19</id>
+            			
+            <activation>
+                				
+                <jdk>[9,12]</jdk>
+                			
+            </activation>
+            			
+            <dependencies>
+                				
+                <dependency>
+                    					
+                    <groupId>org.jooq</groupId>
+                    					
+                    <artifactId>jool</artifactId>
+                    					
+                    <version>0.9.12</version>
+                    					
+                    <optional>true</optional>
+                    					
+                    <scope>test</scope>
+                    				
+                </dependency>
+                				
+                <dependency>
+                    					
+                    <groupId>com.boundary</groupId>
+                    					
+                    <artifactId>fasttuple-core</artifactId>
+                    					
+                    <version>0.1</version>
+                    					
+                    <optional>true</optional>
+                    					
+                    <scope>test</scope>
+                    				
+                </dependency>
+                			
+            </dependencies>
+            			
+            <build>
+                				
+                <plugins>
+                    					
+                    <plugin>
+                        						
+                        <groupId>org.apache.maven.plugins</groupId>
+                        						
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        						
+                        <configuration>
+                            							
+                            <argLine>--add-opens java.base/java.lang=ALL-UNNAMED 
 								--add-opens org.simpleflatmapper.csv/org.simpleflatmapper.csv.test=org.simpleflatmapper.reflect 
 								--add-opens org.simpleflatmapper.csv/org.simpleflatmapper.csv.test.writer.time=org.simpleflatmapper.reflect 
 								--add-opens org.simpleflatmapper.csv/org.simpleflatmapper.csv.test.writer=org.simpleflatmapper.reflect 
                                 --add-opens org.simpleflatmapper.csv/org.simpleflatmapper.csv.test.bug=org.simpleflatmapper.reflect </argLine>
-						</configuration>
-					</plugin>
-				</plugins>
-
-			</build>
-		</profile>
-
-	</profiles>
+                            						
+                        </configuration>
+                        					
+                    </plugin>
+                    				
+                </plugins>
+                			
+            </build>
+            		
+        </profile>
+        	
+    </profiles>
+    
 </project>
