--- a/sfm-test-lombok/pom.xml
+++ b/sfm-test-lombok/pom.xml
@@ -8,7 +8,7 @@
     	
     <packaging>jar</packaging>
     	
-    <version>8.2.3-SNAPSHOT</version>
+    <version>8.2.2</version>
     	
     <licenses>
         		
@@ -61,7 +61,7 @@
             			
             <artifactId>sfm-csv-jre9</artifactId>
             			
-            <version>8.2.3-SNAPSHOT</version>
+            <version>8.2.2</version>
             		
         </dependency>
         		
@@ -71,7 +71,7 @@
             			
             <artifactId>sfm-jdbc-jre9</artifactId>
             			
-            <version>8.2.3-SNAPSHOT</version>
+            <version>8.2.2</version>
             		
         </dependency>
         		
@@ -81,7 +81,7 @@
             			
             <artifactId>sfm-test-jre9</artifactId>
             			
-            <version>8.2.3-SNAPSHOT</version>
+            <version>8.2.2</version>
             		
         </dependency>
         		
