--- a/sfm-jdbi/pom.xml
+++ b/sfm-jdbi/pom.xml
@@ -1,7 +1,7 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>sfm-jdbi</artifactId>
+	<artifactId>sfm-jdbi-jre6</artifactId>
 	<packaging>bundle</packaging>
 
 	<name>sfm-jdbi</name>
@@ -10,7 +10,7 @@
 	<parent>
 		<groupId>org.simpleflatmapper</groupId>
 		<version>8.2.3-SNAPSHOT</version>
-		<artifactId>sfm-parent</artifactId>
+		<artifactId>sfm-parent-jre6</artifactId>
 	</parent>
 
 	<licenses>
@@ -52,12 +52,12 @@
 
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-jdbc</artifactId>
+			<artifactId>sfm-jdbc-jre6</artifactId>
 			<version>8.2.3-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-test</artifactId>
+			<artifactId>sfm-test-jre6</artifactId>
 			<version>8.2.3-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
